--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -299,7 +299,7 @@ background-color: rgb(232, 179, 54);</string>
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>300</height>
+           <height>400</height>
           </size>
          </property>
          <property name="frameShape">
@@ -422,6 +422,12 @@ background-color: rgb(232, 179, 54);</string>
           </item>
           <item>
            <widget class="QWidget" name="spreadTheWord" native="true">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>200</height>
+             </size>
+            </property>
             <layout class="QVBoxLayout" name="spreadTheWordLayout">
              <property name="bottomMargin">
               <number>10</number>
@@ -436,8 +442,8 @@ background-color: rgb(232, 179, 54);</string>
                </property>
                <property name="minimumSize">
                 <size>
-                 <width>98</width>
-                 <height>98</height>
+                 <width>50</width>
+                 <height>50</height>
                 </size>
                </property>
                <property name="maximumSize">
